k8s/app1.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: app1-deployment
  labels: 
    app: app1
    version: v3
spec: 
  replicas: 2
  selector: 
    matchLabels: 
      app: app1

template: 
  metadata:
    labels:
      app: app1
      version: v3 
 
  spec:
    containers: 
      -name: app1-container
      image: kkfunda123/app1:3.0.0 
      imaagePullPolicy: Always
      ports: 
        -containerPosrt: 5000
        name: http

      resources: 
        requests: 
          memory: "128mi"
          cpu: "100m"
        limits: 
          memory: "256mi"
          cpu: "200m"
      livenessProbe: 
        httpGet: 
          path: /health
          port: 5000
        initialDelaySeconds: 30
        periodSeconds: 10
      readynessProbe: 
        httpdGet: 
          path: /health
          port: 5000
        initialDelaySeconds: 5
        periodSeconds: 5
