k8s/ingress-https.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: microservices-ingress

  annotations:
    kubernetes.io/ingress.class: alb

    # ALB
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip

    # Health check
    alb.ingress.kubernetes.io/healthcheck-path: /health
    alb.ingress.kubernetes.io/healthcheck-interval-seconds: '15'
    alb.ingress.kubernetes.io/healthcheck-timeout-seconds: '5'
    alb.ingress.kubernetes.io/success-codes: '200'
    alb.ingress.kubernetes.io/healthy-threshold-count: '2'
    alb.ingress.kubernetes.io/unhealthy-threshold-count: '2'

    # HTTP + HTTPS listeners
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80},{"HTTPS":443}]'

    # Redirect HTTP -> HTTPS
    alb.ingress.kubernetes.io/ssl-redirect: '443'

    # ACM certificate for myapp.local
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-south-1:638120274866:certificate/48162af0-2e7b-4ba5-94b2-daeb9003b8c0

    # TLS policy
    alb.ingress.kubernetes.io/ssl-policy: ELBSecurityPolicy-TLS-1-2-2017-01

    # ALB -> Pods uses HTTP
    alb.ingress.kubernetes.io/backend-protocol: HTTP

    # ALB group
    alb.ingress.kubernetes.io/group.name: microservices-group

spec:
  ingressClassName: alb

  rules:
    - host: myapp.local
      http:
        paths:

          # App 1
          - path: /app1
            pathType: Prefix
            backend:
              service:
                name: app1-service
                port:
                  number: 80

          # App 2
          - path: /app2
            pathType: Prefix
            backend:
              service:
                name: app2-service
                port:
                  number: 80

          # App 3
          - path: /app3
            pathType: Prefix
            backend:
              service:
                name: app3-service
                port:
                  number: 80

          # Default route
          - path: /
            pathType: Prefix
            backend:
              service:
                name: app1-service
                port:
                  number: 80
